<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Platform.ThemeOverlay.AppCompat.Light"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_large"
      android:layout_marginRight="@dimen/padding_large"
      android:orientation="vertical"
      android:padding="@dimen/padding_medium"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/app_name"
        android:textAppearance="@style/AppTheme.Caption"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_xxxlarge"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/browse"
        android:textAppearance="@style/AppTheme.Caption"
        android:textColor="@color/color_text_blac_light"
        />

    <EditText
        android:id="@+id/et_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:background="@color/color_light_grey"
        android:drawablePadding="@dimen/padding_medium"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:hint="@string/search"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/padding_medium"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />
  </LinearLayout>

</androidx.appcompat.widget.Toolbar>
