<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        >
      <ImageView
          android:id="@+id/img_restaurant"
          android:layout_width="match_parent"
          android:layout_height="240dp"
          android:adjustViewBounds="true"
          android:scaleType="fitXY"
          app:layout_collapseMode="pin"
          />

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clipToPadding="false"
          app:layout_collapseMode="pin"
          app:navigationIcon="@drawable/ic_arrow_back_24dp"
          >

      </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>


  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white"
      android:padding="@dimen/padding_medium"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <LinearLayout
          android:id="@+id/restaurant_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="@dimen/padding_small"
          android:weightSum="2"
          >
        <TextView
            android:id="@+id/tv_restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.3"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:textAppearance="@style/AppTheme.Caption"
            tools:text="@string/app_name"
            />


        <TextView
            android:id="@+id/open_zomato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_small"
            android:layout_weight=".7"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/order_at_zomato"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium"
            />

      </LinearLayout>

      <RelativeLayout
          android:id="@+id/rl_rating"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_small"
          android:layout_marginRight="@dimen/padding_medium"
          android:orientation="horizontal"
          android:paddingTop="@dimen/padding_small"
          android:paddingBottom="@dimen/padding_medium"
          android:paddingLeft="@dimen/padding_xsmall"
          android:paddingRight="@dimen/padding_xsmall"
          android:weightSum="2"
          >

        <TextView
            android:id="@+id/tv_cusines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/padding_large"
            android:gravity="start"
            android:layout_toLeftOf="@id/rating"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/font_medium"
            tools:text="sad kasdkl"
            />


        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:isIndicator="true"
            android:numStars="5"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:stepSize="0.1"
            style="?android:attr/ratingBarStyleSmall"
            />


      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_medium"
          android:layout_marginRight="@dimen/padding_medium"
          android:background="@color/color_grey_dark"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingTop="@dimen/padding_small"
          android:paddingBottom="@dimen/padding_small"
          android:paddingLeft="@dimen/padding_xsmall"
          android:paddingRight="@dimen/padding_xsmall"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_xsmall"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/address"
            android:textAppearance="@style/AppTheme.Caption"
            android:textColor="@color/color_green"
            android:textSize="@dimen/font_large"
            />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_xsmall"
            android:textSize="@dimen/font_medium"
            tools:text="Bangalore/Chennai"
            />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textSize="@dimen/font_medium"
            tools:text="Address of restaurant"
            />
      </LinearLayout>
    </LinearLayout>

  </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>